syntax = "proto3";

option csharp_namespace = "OrderService.Protos";

package order;

service OrderHandlerService {  
  rpc PlaceOrder (OrderRequest) returns (OrderResponse);
  rpc UpdateOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
    int32 order_id = 1;
    Product product = 2;    
    int32 quantity = 3;
    string address = 4;
}

message OrderResponse {
    string status = 1;
}

message Product {
    int32 product_id = 1;
    string color = 2;
    string description = 3;
    double price = 4;
}
